--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -95,7 +95,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LHH-yO-53W">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LHH-yO-53W">
                                 <rect key="frame" x="16" y="20" width="343" height="597"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <userDefinedRuntimeAttributes>
@@ -114,6 +114,7 @@
                     <connections>
                         <outlet property="ImageView" destination="5eT-dP-LFc" id="r7k-5m-gMt"/>
                         <outlet property="baseView" destination="8bC-Xf-vdC" id="iOg-Di-zmB"/>
+                        <outlet property="coverImageView" destination="LHH-yO-53W" id="WiP-a4-DDP"/>
                         <outlet property="dayLabel" destination="Zlb-0P-v9e" id="96m-ZT-dqS"/>
                         <outlet property="monthLabel" destination="1B2-wr-sjG" id="DDa-H0-TiW"/>
                         <outlet property="personLabel" destination="amO-0S-GK9" id="71c-SN-tJV"/>
